# TrashBot

install/: local_setup.sh  setup.sh  spawn_shell.bash
install/navigation_practice/share/navigation_practice/: package.bash  package.ps1  package.sh  package.zsh
install/navigation_practice/share/navigation_practice/cmake/: navigation_practiceConfig.cmake
install/navigation_practice/share/navigation_practice/launch/: mapping.launch.py
install/robot_body_perception/share/robot_body_perception/: package.bash  package.ps1  package.sh  package.xml
install/robot_body_perception/share/robot_body_perception/launch/: robot_state_publisher.py
install/robot_body_perception/share/robot_body_perception/urdf/: lidar_chassis_frames.urdf
launch/: robot_state_publisher.py
log/: latest_build
src/: frames.gv  lidar_tuning.sdf  my_map.pgm  my_map.yaml
src/install/: local_setup.sh  setup.sh
src/install/navigation_practice/share/navigation_practice/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.sh  package.xml
src/install/robot_body_perception/lib/robot_body_perception/: wrapper
src/log/: latest_build
src/navigation_practice/: CMakeLists.txt
src/robot_body_perception/: package.xml  setup.cfg  setup.py
src/robot_body_perception/robot_body_perception/: slam_toolbox_wrapper.py
src/robot_body_planning/: CMakeLists.txt  package.xml
src/robot_body_planning/src/: brushfire_AGVD.cpp  clustering.py  occupancy_to_pose.cpp
urdf/: lidar_chassis_frames.urdf
(+30 files in other folders)
